* Animated showing and hiding of the replace bar.
* Removed support to substitution lists in XML.
* Compatibility with Firefox from 30.0 to 37.0.

v0.16.1 (2014-06-13)
* Fixed issue with the auto-replace on load option on the toolbar button menu showing incorrect values in some cases (issue 142).
* Fixed bug where the substitution group editor ok button failed when not all the URLs were visible (issue 139).

v0.16.0 (2014-05-31)
* Updated toolbar icons for Australis.
* Moved toolbar close button to the right to match newer Firefox versions.
* Unconfirmed changes (i.e. additions or editions) in substitution groups are automatically confirmed when pressing the dialog OK button (issue 125).
* The replace bar is hidden when the ESC key is pressed (issue 107).
* Pressing the return key when focus is in one of the text fields applies the replace bar substitution (issue 107).
* New option to periodically apply the substitution list (issue 129). This allows to overcome the limitation with dynamic content in some cases.
* Updated shortcuts in the options dialog (issue 108).
* Compatibility with Firefox up to 33.0.
* New locale:
  - ast-ES (by alministradores@softastur.org)

v0.15.0 (2013-08-03)
* Textboxes in the replace bar use as much width as they can.
* Change event is fired when a substitution changes text in an input or textarea element (issue 49).
* Updated icon sizes.
* Substitutions with HTML only in the output (issue 5).
* Updated help (issue 110).
* Disabled tr locale (was reported as bad translation).
* New substitution groups enabled by default in the substitution group editor.
* Improved substitution list behaviour in options dialog (issue 112).
* Changed the code to open the options dialog to take into account several features (issues 98 and 66).
* Moved the descriptions of the options and substitution group editor dialogs to a tooltip showable with a "more info" button to remove clutter.